<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NovelDroid</string>
    <string name="author_name">sh1r0</string>
    <string name="quit">Quit</string>
    <string name="id_hint">Novel ID</string>
    <string name="novel_name">Novel Name</string>
    <string name="author">Author</string>
    <string name="author_hint">Optional</string>
    <string name="from_page">From Page</string>
    <string name="to_page">To Page</string>
    <string name="analyze">Analyze</string>
    <string name="download">Download</string>
    <string name="no_connection_tooltip">No Network Connection</string>
    <string name="novel_id_tooltip">Novel ID cannot be blank</string>
    <string name="analysis_done_tooltip">Analysis Done!</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="close_btn">Close</string>
    <string name="error_dialog_title">Error</string>
    <string name="empty_name_dialog_msg">Novel name field cannot be blank</string>
    <string name="wrong_page_dialog_msg">Please check page fields again</string>
    <string name="downloading_tooltip">Downloading\u2026</string>
    <string name="download_success_tooltip">Novel Download Success!!</string>
    <string name="download_fail_tooltip">Novel Download Fail :(</string>
    <string name="download_fail_msg">Download failed</string>
    <string name="novel_saved_tooltip">is done</string>
    <string name="progress_dialog_title">Wait</string>
    <string name="progress_dialog_msg">Processing\u2026</string>
    <string name="author_tag">Author:\u0020</string>
    <string name="version_tag">Version:\u0020</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="check_update">Check Update</string>
    <string name="checking">Checking\u2026</string>
    <string name="check_update_fail_tooltip">Failed to check update!!</string>
    <string name="current_is_latest">Current version is the latest.</string>
    <string name="found_update">Update Found</string>
    <string name="current_version">Current Version:\u0020</string>
    <string name="latest_version">Latest Version:\u0020</string>
    <string name="update">Update</string>
    <string name="encoding">Encoding</string>
    <string name="encoding_dialog_title">Select Encoding</string>
    <string name="filename_rule">Filename Rule</string>
    <string name="filename_rule_dialog_title">Select Naming Rule</string>
    <string name="download_folder">Download Folder</string>
    <string name="new_folder">New Folder</string>
    <string name="new_folder_name">New Folder Name</string>

</resources>
