<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:icon="@drawable/ic_action_edit"
        android:title="@string/encoding"
        android:key="encoding"
        android:entries="@array/encoding"
		android:entryValues="@array/encoding"
		android:defaultValue="UTF-8"
        android:dialogTitle="@string/encoding_dialog_title"
        />
    
    <ListPreference
        android:icon="@drawable/ic_action_keyboard"
        android:title="@string/filename_rule"
        android:key="naming_rule"
        android:entries="@array/naming_rule"
		android:entryValues="@array/naming_rule_value"
		android:defaultValue="0"
        android:dialogTitle="@string/filename_rule_dialog_title"
        />
    
    <Preference
        android:icon="@drawable/ic_action_collection"
        android:title="@string/download_folder"
        android:key="down_dir"
    	/>
    
    <Preference
        android:icon="@drawable/ic_action_refresh"
	    android:title="@string/check_update"
	    android:key="check_update"
	    />
    
	<Preference
	    android:icon="@drawable/ic_action_about"
	    android:title="@string/about"
	    android:key="about"
	    />

</PreferenceScreen>
