<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/id_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spn_doamin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/id_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_analyze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analyze"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/novel_name_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_info"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_novel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novel_name" />

        <EditText
            android:id="@+id/et_novel_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/author_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/novel_name_info"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author" />

        <EditText
            android:id="@+id/et_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/author_hint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/page_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_info"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_from_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_page" />

        <EditText
            android:id="@+id/et_from_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_to_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_page" />

        <EditText
            android:id="@+id/et_to_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" />

    <Button
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/download" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_download"
        android:layout_marginTop="50dp"
        android:max="100"
        android:visibility="gone"
        android:keepScreenOn="true" />

    <TextView
        android:id="@+id/tv_dl_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressbar"
        android:gravity="center"
        android:visibility="gone" />

</RelativeLayout>
